fix how to add community story

--- a/content/community/community_stories.adoc
+++ b/content/community/community_stories.adoc
@@ -7,5 +7,5 @@ Alex Miller
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-If you'd like to share your Clojure story, please contact __alex.miller@cognitect.com__.
+If you'd like to share your Clojure story, please https://docs.google.com/forms/d/e/1FAIpQLSf0Wx6sOVxPeeob45VqJXqRYKM9K_-Mzir-DYFbnXZ1lR_BGg/viewform[complete this form].
 
