--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -229,6 +229,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * http://logicsoft.co.in/[Logic Soft Pvt. Ltd.,opts=nofollow]
 * http://lonocloud.com/[LonoCloud (acquired by ViaSat),opts=nofollow]
 * https://www.loway.ch/[Loway,opts=nofollow]
+* https://lucidit.consulting[Lucid IT Consulting LLC,opts=nofollow]
 * https://www.lunchboxsessions.com[LunchBox Sessions,opts=nofollow]
 * https://www.macrofex.com/[Macrofex,opts=nofollow]
 * http://www.macrofex.com[MACROFEX LLC,opts=nofollow]
