--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -124,6 +124,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * https://www.discendum.com[Discendum ltd,opts=nofollow]
 * https://www.dividendfinance.com[Dividend Finance,opts=nofollow]
 * https://www.docsolver.com[DocSolver,opts=nofollow]
+* https://drevidence.com/[Doctor Evidence,opts=nofollow]
 * https://www.doctronic.de[Doctronic,opts=nofollow]
 * http://dov-e.com[DOV-E,opts=nofollow]
 * http://dploy.io/[dploy.io,opts=nofollow]
