--- a/content/guides/comparators.adoc
+++ b/content/guides/comparators.adoc
@@ -7,7 +7,7 @@ Andy Fingerhut
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-_Note: This document describes Clojure 1.7 and Java 6, but applies to most other versions as well._
+_Note: This document describes Clojure 1.10 and Java 8, but applies to most other versions as well._
 
 == Summary
 
@@ -26,8 +26,7 @@ https://clojure.github.io/data.priority-map/#clojure.data.priority-map/priority-
 The default comparator https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compare[compare]
 works well for sorting numbers in increasing order, or strings, keywords, or symbols,
 in https://en.wikipedia.org/wiki/Lexicographical_order[lexicographic] (i.e dictionary) order,
-and a few other cases. See https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compare[compare]
-for examples and more details.
+and a few other cases. See below for examples and more details.
 
 If `compare` does not do what you want, you must provide your own comparator that does. Each of the
 recommendations below is explained in more detail later in this document.
@@ -70,32 +69,93 @@ https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/rsubseq[rsu
 
 == Introduction
 
-Here we briefly describe the default sorting order provided by the function `compare`.
+Here we describe the default sorting order provided by the function `compare`.
 After that we give examples of other comparators, with some guidelines to follow and
 mistakes to avoid when writing your own.
 
-If you do not specify your own comparator, sorting is done by a built-in function `compare`.
-`compare` works for many types of values, ordering them in one particular way: increasing
-numeric order for numbers; https://en.wikipedia.org/wiki/Lexicographical_order[lexicographic order]
-(aka dictionary order) for strings, symbols, and keywords; shortest-to-longest order by Clojure
-vectors, with lexicographic ordering among equal length vectors. All Java types that implement
-the http://docs.oracle.com/javase/6/docs/api/java/lang/Comparable.html[Comparable]
-interface such as characters, booleans, File, URI, and UUID are compared via their
-`compareTo` methods. Finally, `nil` can be compared to all values described earlier, and
-is considered less than everything else.
-See https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compare[compare]
-for examples and more details.
+== Clojure's default comparator
 
-If this built-in sorting order does not meet your needs, or does not work at all for values
-of type you wish to sort, you can write your own comparator and use that instead.
-There are a few rules to follow when writing a comparator that works correctly.
+If you do not specify your own comparator, sorting is done by a built-in function `compare`.
+`compare` works for many types of values, ordering them in one particular way:
+
+* numbers are sorted in increasing numeric order, returning 0 if two
+  numbers are numerically equal by `==`, even if `=` returns false.
+  Exception: Even though `pass:[(== ##NaN x)]` is false for all
+  numbers _x_, even `pass:[##NaN]`, `(compare ##NaN x)` is 0 for all
+  numbers _x_, including `pass:[##NaN]`.
+* strings are sorted in
+  http://en.wikipedia.org/wiki/Lexicographical_order[lexicographic
+  order] (aka dictionary order) by their representation as sequences
+  of UTF-16 code units.  This is alphabetical order (case-sensitive)
+  for strings restricted to the ASCII subset.
+* symbols are sorted first by their namespace, if they have one, and
+  if they have the same namespace, then by their name.  Both the
+  namespace and names are compared as their string representations
+  would be, lexicographically.  All symbols that do not have a
+  namespace are sorted before any symbol with a namespace.
+* keywords are sorted the same way as symbols, but an exception is
+  thrown if you attempt to compare a keyword to a symbol.
+* vectors are sorted from fewest elements to most elements, with
+  http://en.wikipedia.org/wiki/Lexicographical_order[lexicographic
+  ordering] among equal length vectors.
+* Clojure refs are sorted in the order that they were created.
+* All Java types implementing the
+  https://docs.oracle.com/javase/8/docs/api/java/lang/Comparable.html[Comparable]
+  interface such as characters, booleans, File, URI, and UUID are
+  compared via their `compareTo` methods.
+* `nil`: can be compared to all values above, and is considered less
+  than anything else.
+
+`compare` throws an exception if given two values whose types are "too
+different", e.g. it can compare integers, longs, and doubles to each
+other, but not strings to keywords or keywords to symbols.  It cannot
+compare lists, sequences, sets, or maps.
+
+The examples below with `sort`, `sorted-set`, and `sorted-map` all use
+the default comparator.
+
+[source,clojure]
+----
+user> (sort [22/7 2.71828 ##-Inf 1 55 3N])
+(##-Inf 1 2.71828 3N 22/7 55)
+
+user> (sorted-set "aardvark" "boo" "a" "Antelope" "bar")
+#{"Antelope" "a" "aardvark" "bar" "boo"}
+
+user> (sorted-set 'user/foo 'clojure.core/pprint 'bar 'clojure.core/apply 'user/zz)
+#{bar clojure.core/apply clojure.core/pprint user/foo user/zz}
+
+user> (sorted-map :map-key 10, :amp [3 2 1], :blammo "kaboom")
+{:amp [3 2 1], :blammo "kaboom", :map-key 10}
+
+user> (sort [[-8 2 5] [-5 -1 20] [1 2] [1 -5] [10000]])
+([10000] [1 -5] [1 2] [-8 2 5] [-5 -1 20])
+
+user> (import '(java.util UUID))
+java.util.UUID
+
+user> (sort [(UUID. 0xa 0) (UUID. 5 0x11) (UUID. 5 0xb)])
+(#uuid "00000000-0000-0005-0000-00000000000b"
+ #uuid "00000000-0000-0005-0000-000000000011"
+ #uuid "00000000-0000-000a-0000-000000000000")
+
+user> (sort [:ns2/kw1 :ns2/kw2 :ns1/kw2 :kw2 nil])
+(nil :kw2 :ns1/kw2 :ns2/kw1 :ns2/kw2)
+----
+
+An exception will be thrown if you call `compare` with different
+types.  Any numeric types above can be compared to each other, but not
+to a non-numeric type.  An exception will also be thrown if you use
+`compare` on a list, set, map, or any other type not mentioned above.
+You must implement your own comparator if you wish to sort such
+values.
 
 == Off-the-shelf comparators
 
 First consider using well-tested comparators developed by others, especially if they are complex.
 
 A perfect example of this would be sorting Unicode strings in different languages in orders
-specific to different locales. The Java http://docs.oracle.com/javase/6/docs/api/java/text/Collator.html[Collator]
+specific to different locales. The Java https://docs.oracle.com/javase/8/docs/api/java/text/Collator.html[Collator]
 class and http://site.icu-project.org/home#TOC-What-is-ICU-[ICU] (International Components for Unicode) provide
 libraries for this.
 
@@ -242,7 +302,7 @@ false
 
 
 See Clojure source file
-https://github.com/clojure/clojure/blob/clojure-1.7.0/src/jvm/clojure/lang/AFunction.java#L46[src/jvm/clojure/lang/AFunction.java]
+https://github.com/clojure/clojure/blob/clojure-1.10.0/src/jvm/clojure/lang/AFunction.java#L50[src/jvm/clojure/lang/AFunction.java]
 method `compare` if you want all the details.
 
 === General rules for comparators
@@ -365,9 +425,9 @@ It is less error-prone to use explicit conditional checks and return -1, 0, or 1
 
 Why? Java comparators must return a 32-bit _int_ type, so when a Clojure function is used as a comparator
 and it returns any type of number, that number is converted to an _int_ behind the scenes using the Java method
-http://docs.oracle.com/javase/6/docs/api/java/lang/Number.html#intValue%28%29[intValue].
+https://docs.oracle.com/javase/8/docs/api/java/lang/Number.html#intValue--[intValue].
 See Clojure source file
-https://github.com/clojure/clojure/blob/clojure-1.7.0/src/jvm/clojure/lang/AFunction.java#L46[src/jvm/clojure/lang/AFunction.java]
+https://github.com/clojure/clojure/blob/clojure-1.10.0/src/jvm/clojure/lang/AFunction.java#L50[src/jvm/clojure/lang/AFunction.java]
 method `compare` if you want the details.
 
 For comparing floating point numbers and ratios, this causes numbers differing by less than 1 to be treated as equal,
