--- a/content/community/contrib_libs.adoc
+++ b/content/community/contrib_libs.adoc
@@ -16,7 +16,7 @@ These libraries use the same contribution model (<<contributing#,Contributor Agr
 * Development model - patches in JIRA, no PRs
 * Continuous integration - https://build.clojure.org[Jenkins]
 * Doc generation and hosting - https://tomfaulhaber.github.io/autodoc/[Autodoc] and GitHub http://clojure.github.io/[pages]
-* Builds - Maven with deployment to Maven Central under the groupId `clojure.org`
+* Builds - Maven with deployment to Maven Central under the groupId `org.clojure`
 
 Every project has one or more owners (often community members) who determine the direction of their library, triage patches, etc. Project owners have full commit rights and authenticated access to their project on the build box for releases.
 
