add class access to java interop reference page, closes #344

--- a/content/reference/java_interop.adoc
+++ b/content/reference/java_interop.adoc
@@ -13,6 +13,24 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 toc::[]
 
+== Class access
+
+[%hardbreaks]
+**Classname**
+**Classname$NestedClassName**
+
+Symbols representing class names are resolved to the Class instance. Inner or nested classes are separated from their outer class with a `$`. Fully-qualified class names are always valid. If a class is `import`ed in the namespace, it may be used without qualification. All classes in java.lang are automatically imported to every namespace.
+
+[source,clojure]
+----
+String
+-> java.lang.String
+(defn date? [d] (instance? java.util.Date d))
+-> #'user/date?
+(.getEnclosingClass java.util.Map$Entry)
+-> java.util.Map
+----
+
 == Member access
 
 [%hardbreaks]
