add :deps/root doc, closes #307

--- a/content/reference/deps_and_cli.adoc
+++ b/content/reference/deps_and_cli.adoc
@@ -182,17 +182,20 @@ Coordinates can take several forms depending on the coordinate type:
 ** Other optional keys: `:extension`, `:exclusions`
 ** Note: `:classifier` is no longer supported - add to lib name as specified above
 * Local project coordinate: `{:local/root "/path/to/project"}`
-** Optional key `:deps/manifest`
+** Optional key `:deps/root`
+*** Specifies the relative path within the root to search for the manifest file
+* Local jar: `{:local/root "/path/to/file.jar"}`
+** Optional key `:deps/manifest
 *** Specifies the project manifest type
 *** Default is to auto-detect the project type (such as `:deps`, `:lein`, `:pom`)
-*** Currently only `:deps` is supported
-* Local jar: `{:local/root "/path/to/file.jar"}`
+*** Currently only `:deps` and `:pom` are supported
+** If the jar has been packaged with a pom.xml file, the pom will be read and used to find transitive deps
 * Git coordinate: `{:git/url "https://github.com/user/project.git", :sha "sha", :tag "tag"}`
 ** The `:git/url` can be one of the following:
 *** https - secure anonymous access to public repos
 *** ssh or user@host form urls (including GitHub) - ssh-based access (see Git configuration section)
 ** The `:sha` attribute should indicate the full commit sha
-** The `:tag` attribute is optional but can be used to indicate the semantics of the sha
+** The `:tag` attribute is optional and used only to indicate the semantics of the sha
 
 [source,clojure]
 ----
